Se completan las rutas  userRole y userCompany
