# controllers/userRoleController.js
@@ -20,3 +20,22 @@ exports.getUserRoles = async (req, res) => {
     res.status(500).json({ error: 'Error al obtener roles del usuario' });
   }
 };
+
+exports.deleteUserRoles = async (req, res) => {
+  const { userId } = req.params;
+  try {
+    const roles = await UserRole.destroy({ where: { userId }, include: Role });
+    res.status(200).json(roles);
+  } catch (error) {
+    res.status(500).json({ error: 'Error al borrar roles del usuario' });
+  }
+};
+
+exports.getAllUserRoles = async (req, res) => {
+    try {
+    const roles = await UserRole.findAll();
+    res.status(200).json(roles);
+  } catch (error) {
+    res.status(500).json({ error: 'Error al obtener los roles ' });
+  }
+};
